--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -387,6 +387,122 @@
         </div>
       </div>   
           
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        	<div class="timeline-img-header"><img src='img/18.jpg' width=100% height=200>
+          	<h2 class="title">Hi18! 木柵動物園</h2>
+        	</div>
+          <div class="date">20210412</div>
+              <p>Hi18 木柵動物園</p>
+              <p>禮拜五去找你 天氣變得超冷的😀</p>
+              <p>沒穿到蟲蟲衣😀😀</p>
+              <p>我們去吃了個小火鍋（75</p>
+              <p>就回你家了</p>
+              <p>然後就開箱你送我的禮物跟卡片</p>
+              <p>真的超感動欸😀 直接哭出來</p>
+              <p>謝謝你這麼愛我😀😀</p>
+              <p>還好你不是詐騙集團啦</p>
+              <p>你生日的卡片 我壓力開始大了😀</p>
+              <p>茶樹整套我會好好用的</p>
+              <p>下次就不是痘痘男了！</p>
+              <p>隔天去木柵動物園了！之前一直下雨沒去到，雖然這次還是有小下😀</p>
+              <p>很多動物都在睡覺找不到😀</p>
+              <p>猴子很好笑 我們還看到被蚊子叮爆😀</p>
+              <p>昆蟲爬蟲類 你覺得很恐怖😀就速速看</p>
+              <p>企鵝跟熊貓 我反而覺得還好</p>
+              <p>大象我們都沒正面看到😀 禁止攀爬啦😀</p>
+              <p>無尾熊意外的有活力欸😀不是要睡20個小時嗎😀😀</p>
+              <p>總之動物園很好玩！之後還可以來！</p>
+              <p>然後我們就去吃泰獅了（82</p>
+              <p>吃完就逛唐吉軻德 又惹你生氣了😀</p>
+              <p>抱券😀😀😀</p>
+              <p>之後去夜市 吃了旗魚黑輪（0 好難吃根本被騙😀😀</p>
+              <p>然後你發現你的熊熊不見了🙁</p>
+              <p>我們就沿路找 還是沒找到</p>
+              <p>希望捷運那隻是你的🥺</p>
+              <p>第三天我們去了信義 喝了春水堂的奶茶（75 考慮價錢 60 跟去吃一蘭拉麵（70</p>
+              <p>本店跟分店好像沒什麼差 湯頭一樣很鹹😀</p>
+              <p>最後我們去了大稻埕 奇怪的老街 跟碼頭看夕陽 聊天 很peaceful</p>
+              <p>最後就回家溜😀</p>
+              <p>很快就可以再見面了！</p>
+            <br>
+        </div>
+      </div>    
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        	<div class="timeline-img-header"><img src='img/19.jpg' width=100% height=200>
+          	<h2 class="title">Hi19 台南</h2>
+        	</div>
+        	<div class="date">20210430</div>
+              <p>終於又見面了！雖然現在打這篇文 是在返家的過程了 你現在跟我坐在同一列列車上 但是不在旁邊😀</p>
+              <p>這一次是台南</p>
+              <p>其實已經忘記吃了啥了啦😀</p>
+              <p>但還是回想一下</p>
+              <p>第一天我晚上來，竟然沒看到你剪了頭髮😀 車上真的太暗了啦😀😀😀</p>
+              <p>可憐欸 直接被扣分😃</p>
+              <p>跟他們去酒吧喝酒 我真的很緊張啦 不知道要說啥</p>
+              <p>但後來玩牌就比較不會尷尬了😀</p>
+              <p>他們人很好喔😀希望不要被他們認為我是怪人😀</p>
+              <p>第二天我們去吃了蛋餅早餐店 （75</p>
+              <p>還有蝦仁飯（60</p>
+              <p>然後我們就去了 夕遊出張所 吃冰淇淋（75</p>
+              <p>許願的事抱歉啦 那時候我根本沒有仔細看上面的字🙃 在恍神啦😀 抱券</p>
+              <p>後來一起許了願</p>
+              <p>希望我可以跟你白頭偕老</p>
+              <p>我不會再這麼白目啦😀</p>
+              <p>去老街買了肉乾跟蜜餞，這途中我們車位一直找很久😀 你隱約覺得我人太好 應該要直接停 我是善良守序啦😀</p>
+              <p>晚上我們去逛了花園夜市，第一攤打香腸（85 因為我十元就中了一根香腸啦 你，一顆糖果😀😀</p>
+              <p>接下來</p>
+              <p>麻辣魚丸鴨血（78</p>
+              <p>酵素臭豆腐（75</p>
+              <p>糖餅（50</p>
+              <p>地瓜球（83</p>
+              <p>黃金魚卵跟魚塊（78</p>
+              <p>百香果汁（65</p>
+              <p>香腸米腸（70</p>
+              <p>小火鍋 （78</p>
+              <p>還有玩套圈圈 套中奇怪的史奴比跟麻將😀</p>
+              <p>回去後 我們邊走邊唱周杰倫的歌比賽，我覺得這一趟我最喜歡的是唱歌這一段</p>
+              <p>回飯店後還 玩了奇怪的角色扮演 好好笑 師父這角色先封印起來啦😀</p>
+              <p>第三天早上我們去吃了豬油拌飯（80</p>
+              <p>還有炸雞洋行（85 跟麻古茶坊金萱茶（70</p>
+              <p>後來玩了一下湯姆熊</p>
+              <p>然後我們就去了鬼咖啡（80</p>
+              <p>最後就一起搭車了啦😀</p>
+              <p>好啦 你準備要下車了 拜拜</p>
+              <p>下個禮拜見喔！</p>
+              <p>我很愛你喔！</p>
+              <p>再見！</p>
+            <br>
+        </div>
+      </div>   
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content js--fadeInLeft">
+          <h1>Hi20! 新竹淡水</h1>
+       		<div class="date">20210507</div>
+           <p>這裡是秘密文章 因為我沒有PO在IG</p>
+           <p>如果你發現了 可以跟我說 Love520 即可兌換一份大餐券(你隨便挑) 只在5/20 前喔!</p>
+
+           <p>今天你一整個睡過頭 好好笑😀</p>
+           <p>下午我們去打桌球</p>
+           <p>我球技還不錯吧~</p>
+           <p>看到你打球的樣子 真的好認真喔  阿智根本不是你對手</p>
+           <p>然後我們就去吃老四川~好吃耶 之後我們再去台北吃吧</p>
+           <p>隔天我們都在睡覺😀</p>
+           <p>然後得知你不陪我一起去搭公車 理性的我覺得OK 感性的我在畫圈圈</p>
+           <p>但你還是很棒的陪我騎wemo啦!雖然你後來搭車時 沒回頭跟我掰掰😀</p>
+           <p>疫情變嚴重了 不知道什麼時候可以見面 :(</p>
+           <p>我們都要健健康康的喔!我愛你喔!</p>
+        </div>
+      </div> 
+
+
     </div>
   </section>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
