--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -503,6 +503,70 @@
       </div> 
 
 
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        	<div class="timeline-img-header"><img src='img/21.jpg' width=100% height=200>
+          	<h2 class="title">Hi21 新竹</h2>
+        	</div>
+        	<div class="date">20210918</div>
+              <p>停更了許久的Hi21終於來了</p>
+              <p>這一次去了新竹動物園跟城隍廟</p>
+              <p>這反而是一個我很熟悉的地方</p>
+              <p>之前都是跟著你 逛你熟悉的台北跟淡水</p>
+              <p>現在換我帶你啦😀</p>
+              <p>雖然新竹跟苗栗還蠻無聊的就是了！</p>
+              <p>這次終於吃到肖想很久的老四川了😀 好吃好吃 雖然等了好久 真的快餓扁溜</p>
+              <p>然後我們練了一下機車，之後再多找一些空地練習吧！給你載我就可以在後面偷摸你了😀好笑😀</p>
+              <p>然後我們去711掃描文件 男友力的展現 大概就是一張8塊跟16塊的差距😀</p>
+              <p>然後吃了鹽燒大王 大概只有4分吧😀難吃難吃</p>
+              <p>然後我們終於真正的一起看了大嘻哈時代，你就在旁邊的感覺好讚😀雖然你不讓我裝5K PLAYER 🥺</p>
+              <p>這週還要看喔！國蛋！</p>
+              <p>隔天是颱風天但沒什麼下雨 所以我們決定去動物園 雖然就小小的 但你看起來很開心😀 木柵跟新竹的猴子還是一樣 喜歡吃蟲子 唯一不一樣的是新竹的喜歡吃大花咸豐草😀</p>
+              <p>然後看到一隻有憂鬱症的馬來熊 可憐可憐滴</p>
+              <p>後來我們去麗池公園的池塘餵魚 賣魚飼料的阿嬤好笑😀 睡覺被嚇到又很心虛的說 30元 😀</p>
+              <p>然後去了城隍廟吃了王記蚵仔煎 貢丸湯 米粉 還有 綠豆沙 好吃好吃😀</p>
+              <p>以後大富大貴還是要來回味這種路邊攤小吃啦😀</p>
+              <p>之後我就回家了 下禮拜還能見面 爽爽滴😀</p>
+            <br>
+        </div>
+      </div>   
+
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        	<div class="timeline-img-header"><img src='img/22.jpg' width=100% height=200>
+          	<h2 class="title">Hi22 新竹</h2>
+        	</div>
+          <div class="date">20211009</div>
+              <p>Hi22 國慶連假</p>
+              <p>這一次待在你家 耍廢行程😀</p>
+              <p>沒吃到老瀋陽 沒去湖口老街</p>
+              <p>耍廢耍廢😀</p>
+              <p>第一天早上先去吃了拉亞漢堡 80</p>
+              <p>然後去巨城 看了很多要買的東西 結果後來都沒買😀 好笑好笑</p>
+              <p>後來肚子飽飽的 就取消了 老瀋陽酸菜白肉鍋了😀 下次再去吃吧</p>
+              <p>然後我們就去看尚氣了 真的很好看欸 這部90 梁朝偉大概佔了75</p>
+              <p>然後就去皿富器食了 套餐100元如果沒點的話大概90但我們點了 所以給他87😀</p>
+              <p>然後我們吃完又逛了一下巨城買了一下蠟燭就回家了，將軍村以後再去啦😀 然後看了一下大嘻哈時代總冠軍，以後沒機會裝到5K player了🐛</p>
+              <p>禮拜日 去吃你家旁邊的早餐店 80</p>
+              <p>我們打了一下羽球 然後就睡覺睡覺😀 還吃了麥當勞 耍廢耍廢</p>
+              <p>然後休息一下 晚上就去nova 逛了一下,每次經過都會講要不要逛，這次真的逛到了😀 買了玻璃貼😀還看了一下清大夜市😀根本不是夜市😀 然後就去南大路買羽球跟吃清粥小菜 給他85分 覺得神奇神奇滴，回程我們</p>
+              <p>在麗池看了燈光秀跟散步，這應該是我這幾天最喜歡的行程了😀畢竟三個禮拜前我自己在那邊邊走邊哭😀</p>
+              <p>然後就回去幫你貼玻璃貼跟找中文翻譯 厲害吧😀 男友力</p>
+              <p>隔天我們5點半就起床了 然後直接去打羽球 真的發瘋欸😀</p>
+              <p>然後因為太早起 我打的好累 平手 可惡可惡 之後再來啦😀</p>
+              <p>又吃了同一家早餐店😀又是鍋燒意麵 有沒有這麼好吃😀</p>
+              <p>然後就回去睡覺溜 睡到10點多</p>
+              <p>11點有點下雨 我們就坐公車去市區</p>
+              <p>買了innisfree 然後去逛了大遠百，你終於買到鞋子了！好欣慰🥺 不用再走到腳流血了！後來吃了海底撈😀好吃好吃 但還是太辣了啦 蛋餃以後點半份就好😀 90分</p>
+              <p>吃完就搭計程車回家溜🥺 期待下次見面欸😀 好想跟你逛夜市跟打羽球欸</p>
+            <br>
+        </div>
+      </div>    
+
+
     </div>
   </section>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
