--- a/just_love/index.html
+++ b/just_love/index.html
@@ -46,6 +46,9 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">App區</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#food">食物評分大亂鬥</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#timeline">時間軸&足跡</a>
           </li>
         </ul>
@@ -175,6 +178,17 @@
     </div>
   </section>
 
+
+
+  <!-- Portfolio Grid Section -->
+  <section class="food" id="food">
+    <div class="container">
+      <h2 class="text-center text-uppercase text-secondary mb-0">食物評分大亂鬥</h2>
+      <hr class="star-dark mb-5">
+      <div class="row">
+      </div>
+    </div>
+  </section>
 
 
   <!-- timeline Section -->
@@ -352,7 +366,7 @@
                 }
                 tainan_btn.onclick = function () {
                   sleep.innerHTML = "66南"
-                  eat.innerHTML = "花園夜市/鬼咖啡/鼎富發豬油拌飯"
+                  eat.innerHTML = "花園夜市/鬼咖啡/鼎富發豬油拌飯/籠裏 Bar Lonely/矮仔成蝦仁飯"
                   play.innerHTML = "夕遊出張所"
                 }
                 
