--- a/just_love/timeline/index.html
+++ b/just_love/timeline/index.html
@@ -567,6 +567,130 @@
       </div>    
 
 
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInRight">
+        	<div class="timeline-img-header"><img src='img/21.jpg' width=100% height=200>
+          	<h2 class="title">Hi23 逢甲</h2>
+        	</div>
+        	<div class="date">2021205</div>
+          <p>真的好久沒出去玩了！</p>
+          <p>雖然只是一個短短的逢甲旅行還是很開心喔！</p>
+          <p>上一次出去玩竟然是台南 有夠久😀</p>
+          <p>廢話不多說 馬上開始</p>
+          <p>禮拜六一早我們就趕趕趕</p>
+          <p>差點搭不上車欸，果然火車站沒有車位</p>
+          <p>還好辛志平那邊有！</p>
+          <p>於是我們就搭上火車了！</p>
+          <p>還遇到了一個好心人跟我們換座位 我們就坐在一起溜</p>
+          <p>就聊天玩遊戲 不知不覺就到台中了！搭公車到新光三越</p>
+          <p>結果比預估的還早到 ，店都還沒開我們就去亂走，閃路邊的狗屎，買家樂福的薯條，跟找到一個不喜歡冬天的理由—牽手會一直被靜電電到😀</p>
+          <p>然後就吃瓦城溜,沒有想像中的好吃欸😀</p>
+          <p>但蝦餅有讓我驚艷到 因為他的蝦子會彈牙 泰奶也不錯喝</p>
+          <p>高麗菜跟兩個主菜就普通普通滴</p>
+          <p>整體給他78分😀</p>
+          <p>然後我們就稍微逛了一下</p>
+          <p>就去星巴克坐一下溜 買了蜜柚紅茶滿好喝的82分</p>
+          <p>然後你就上課😀我看漫畫跟休息😀 我還知道你想要筆 厲害吧😀😀</p>
+          <p>然後上完之後我們就騎irent去飯店，又遇到了停車位的問題，原本想再找，但心裡覺得你搞不好會不爽不爽滴，我這次就很反常的直接說就停這裡吧😀結果反而是你想要找別的車位，好笑好笑</p>
+          <p>然後就到飯店溜，整個房間滿舒服的，電視也很大 雖然我們根本沒看😀</p>
+          <p>休息一下後就去逢甲溜</p>
+          <p>吃了</p>
+          <p>惡魔雞排 82</p>
+          <p>綠豆沙 80</p>
+          <p>石板烤肉 60</p>
+          <p>臭豆腐 80</p>
+          <p>之後知道要怎麼買一個組合技了😀</p>
+          <p>回飯店後就聊天了一下</p>
+          <p>對啦</p>
+          <p>我根本不了解自己😀</p>
+          <p>我再找時間列我的十個優缺點</p>
+          <p>還有想跟你結婚的理由</p>
+          <p>（就是很愛你呀😀）</p>
+          <p>每隔一段時間就再來覺察一下</p>
+          <p>希望我們都可以變得越來越好</p>
+          <p>隔天我們就去買伴手禮</p>
+          <p>但是發生了一個小插曲</p>
+          <p>就是irent app壞掉了</p>
+          <p>我們已經走到車邊了卻不能租車</p>
+          <p>你就覺得很煩😀</p>
+          <p>阿就搭計程車啊😀</p>
+          <p>你對這種事情都很不耐煩欸😀</p>
+          <p>總之我們順利搭到車</p>
+          <p>也遇到一個好司機</p>
+          <p>買了太陽餅 小小的 好吃好吃大概80</p>
+          <p>然後要等鼎王我們就去玩bingo跟刮刮樂耗時間 結果輸光光😀老頭一定再笑我們😀</p>
+          <p>然後就吃鼎王啦 除了肉以外 其他都蠻好吃的</p>
+          <p>下次點麻辣鍋就可以了😀</p>
+          <p>整體給89 你從大一就想吃</p>
+          <p>終於吃的啦😀</p>
+          <p>這裡列一下火鍋排名</p>
+          <p>老四川92</p>
+          <p>肉多多 台北 90</p>
+          <p>鼎王 89</p>
+          <p>海底撈 89</p>
+          <p>肉多多 新竹 75😀</p>
+          <p>吃完之後竟然鬼迷心竅的說要搭高鐵回去😀</p>
+          <p>結果我們就騎irent到高鐵站</p>
+          <p>上高鐵之前 你才說我們的機車在火車站😀 我整個嚇爛 完全忘記😀</p>
+          <p>反正就再搭六家</p>
+          <p>先到竹中到你家休息一下😀</p>
+          <p>然後我就搭公車回新竹車站 騎車回家溜</p>
+          <p>總之就是好笑好笑滴 期待下次宜蘭行😀</p>
+            <br>
+        </div>
+      </div>   
+
+      <div class="timeline-item">
+        <div class="timeline-img"></div>
+        <div class="timeline-content timeline-card js--fadeInLeft">
+        	<div class="timeline-img-header"><img src='img/22.jpg' width=100% height=200>
+          	<h2 class="title">Hi24 宜蘭礁溪&台北</h2>
+        	</div>
+          <div class="date">20211224</div>
+            <p>終於又出去玩了！</p>
+            <p>禮拜四晚上 你煮了好吃的火鍋</p>
+            <p>貢丸真的很好吃欸😀 留給我啦😀 99分</p>
+            <p>禮拜五我們就出發前往宜蘭礁溪溜</p>
+            <p>出發前吃了一下北車的咖喱 82</p>
+            <p>先搭高鐵然後搭自強號，中途你就在讀書 我在看陰屍路😀</p>
+            <p>然後就到礁溪溜</p>
+            <p>我們就走路去onsense villa</p>
+            <p>有一小段路😀</p>
+            <p>然後因為還不能入住 我們就騎腳踏車去吸貓咖啡館</p>
+            <p>中途看到田邊很漂亮 所以拍了一下照片 還看到鶴😀</p>
+            <p>咖啡館裡面有好多隻狗 叮噹好笑好笑的 咖啡大概80</p>
+            <p>然後就回去泡溫泉溜</p>
+            <p>休息了一下之後 就出門吃燒烤</p>
+            <p>我覺得有點偏鹹😀 82</p>
+            <p>吃完之後我們就去刮刮樂 好笑的阿姨 虧了不少錢 但好玩啦😀</p>
+            <p>然後就泡湯休息🌝</p>
+            <p>然後我喝酒😨吵架吵架😨</p>
+            <p>最後和好啦😠</p>
+            <p>隔天吃了一下飯店早餐就退房溜</p>
+            <p>還買了蜆精 好笑😀😀</p>
+            <p>然後我們就前往台北溜</p>
+            <p>猴ㄉㄨㄥˋ (打不出來啦😀）的時候小吵了一架😨 其實我真的很想跟你下車去看看 但我們都懶惰😀</p>
+            <p>反正最後就沒下車了</p>
+            <p>到台北後就剛好可以入住燦路督了😀</p>
+            <p>一直休息一直爽😀</p>
+            <p>然後就去了一下中山</p>
+            <p>在捷運站抱了你</p>
+            <p>刷掉你不好的回憶 厲害吧😀</p>
+            <p>後來逛了一下誠品 然後就去師大夜市溜</p>
+            <p>夾娃娃都夾不到，然後吃了菠蘿包80，我覺得毛毛雨在屋簷一起吃的感覺很好😀然後我們就去吃湯咖哩囉 79分啦 因為雞腿裡面紅紅的 我會怕 加上忘記給蛋😀</p>
+            <p>回來就去一下康是美買熱敷眼罩跟內褲 就回來看聲林之王休息溜</p>
+            <p>隔一天我們又玩了一下刮刮樂</p>
+            <p>然後我真的很衰 都沒刮到 就說要吃素 然後有小討論反正最後就是上班中午吃兩個禮拜的素食便當</p>
+            <p>就搭車回新竹溜</p>
+            <p>不要吵架啦😀雖然吵架了你還是煮飯給我吃🥺很棒欸 我真的很愛你欸 這一頓飯雖然很清淡但我覺得是這趟旅程最好吃的 100分 讓你得意忘形一下😀</p>
+            <br>
+        </div>
+      </div>    
+
+
+
     </div>
   </section>
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
